--- a/AppHarborTest/packages.config
+++ b/AppHarborTest/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Appfail.Mvc" version="1.1.0" targetFramework="net40" />
+  <package id="Appfail.WebForms" version="1.1.0" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
