--- a/AppHarborTest/AppHarborTest.csproj
+++ b/AppHarborTest/AppHarborTest.csproj
@@ -119,18 +119,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\StepController.cs" />
+    <Compile Include="Controllers\TutorialController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DefaultContext.cs" />
     <Compile Include="Models\Section.cs" />
     <Compile Include="Models\Step.cs" />
+    <Compile Include="Models\Tutorial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <EmbeddedResource Include="Data.xml" />
+    <Content Include="Content\animate-custom.css" />
+    <Content Include="Content\app.js" />
+    <Content Include="Content\debut_light.png" />
+    <Content Include="Content\main.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -148,6 +155,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tutorial\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
